# bibliographix

./: Cargo.toml  README.md
src/: bib_manager.rs  lib.rs
src/bibliography/: bibliography_dict.rs  bibliography_entry.rs  keys.rs  mod.rs
src/bibliography/bib_types/: article.rs  book.rs  booklet.rs  in_book.rs  in_collection.rs  manual.rs  misc.rs  mod.rs  repository.rs  tech_report.rs  thesis.rs  unpublished.rs  website.rs
src/references/: anchor.rs  bib_reference.rs  mod.rs  reference_manager.rs
src/utils/: date.rs
