[package]
name = "bibliographix"
description = "A bibliography management crate."
version = "0.3.1"
authors = ["trivernis <trivernis@protonmail.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Trivernis/bibliographix"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.15"
chrono-english = "0.1.4"